--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,14 @@
 
+@font-face {
+    font-family: "SourceFont";
+    src:    url(../font/intro/fuenteSource.woff) format("woff");
+}
+
+
+
+
+/* SLIDER CSS */
+
 .container{
   position: relative;
   display: grid;
@@ -46,7 +56,7 @@ img {
     animation: content-s 5s infinite;
 }
 .contentTexto__titulo{
-    font-family: Intro;
+    font-family: "SourceFont";
     font-size: 24px;
     color: #fff;
     text-align: left;
@@ -54,7 +64,7 @@ img {
     padding-bottom: 10px;
 }
 .contentTexto__Parrafo {
-    font-family: Quicksand;
+    font-family: "SourceFont";
     font-weight: normal;
     font-size: 14px;
     font-style: italic;
