variables en codigo sass

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,21 @@
 /* ********* */
 /* @VARIABLES */
 /* ********* */
+
+$content_ancho: 400px;
+$content_altura: 150px;
+$content_position: 300px;
+
+$texto_tamano_h1: 24px;
+$texto_tamano_h2: 14px;
+
+$switch_altura: 10px;
+$switch_ancho: 120px;
+$switch_position_bot: 50px;
+$switch_position_left: 30px;
+
+$a_size: 10px;
+
+$color_texto : white;
+$color_fondo_a : #333;
+$color_fondo2 : #f39c12;
