--- a/public/css/main.css
+++ b/public/css/main.css
@@ -403,7 +403,7 @@ img {
 .contentTexto__titulo {
   font-family: "SourceFont";
   font-size: 24px;
-  color: #fff;
+  color: white;
   text-align: left;
   -webkit-transform: translateX(30px);
           transform: translateX(30px);
@@ -415,7 +415,7 @@ img {
   font-weight: normal;
   font-size: 14px;
   font-style: italic;
-  color: #fff;
+  color: white;
   text-align: left;
   -webkit-transform: translateX(30px);
           transform: translateX(30px);
